Project

General

Profile

Actions

Bug #19018

closed

rgw_file: fix marker computation

Added by Matt Benjamin about 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The underlying type of RGWFileHandle::Directory::marker_cache (dirent_string) was not correct for storing object markers, which have type rgw_obj_key. Since an rgw_obj_key can represent a string via {name=s, instance=""}, just store a flat mapping of uint64_t->rgw_obj_key.

Secondarily, always use the value of next_marker as the marker (works for RGWListBuckets and RGWListBucket).


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #19161: jewel: rgw_file: fix marker computationResolvedNathan CutlerActions
Copied to rgw - Backport #19162: kraken: rgw_file: fix marker computationResolvedNathan CutlerActions
Actions #1

Updated by Matt Benjamin about 7 years ago

  • Status changed from In Progress to Pending Backport
Actions #2

Updated by Matt Benjamin about 7 years ago

  • Backport changed from jewel to jewel kraken
Actions #3

Updated by Nathan Cutler about 7 years ago

Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19162: kraken: rgw_file: fix marker computation added
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF