rgw_file: fix marker computation

Fixes: http://tracker.ceph.com/issues/19018

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit 4454765e7dd08535c50d24205858e18dba4b454c)